# FEPA

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.yml  requirements_old.yml  setup.py  zensical.toml
.github/workflows/: docs.yml  test.yml
config/: config.json
docs/: explanation.md  index.md  reference.md  tutorials.md
docs/how-to-guides/: guide-1.md  guide-2.md  guide-3.md
docs/tutorials/: tutorial-1.md  tutorial-2.md
docs_old/: how-to-guides.md  reference.md  tutorials.md
env/: fepa_env.yml  fepa_env_old.yml
examples/config/: config.json
examples/workflows/: run_memento_apo.py  setup_equil_apo.py  setup_steus_apo.py
fepa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
fepa/core/: DimReducer.py  JSAnalyzer.py  TrajectoryLoader.py  Visualizer.py  analyzers.py  dim_reducers.py  ensemble_handler.py  featurizers.py  visualizers.py
fepa/data/: template_steus_weight_sampling.mdp
fepa/flows/: __init__.py  analysis_flows.py  bp_flows.py  memento_flows.py  reus_flows.py  steus_flows.py  torsions_flow.py
fepa/utils/: BAT_utils.py  abfe_utils.py  check_consistency.py  coord_trans.py  dimred_utils.py  feature_utils.py  featurize_utils.py  file_utils.py  md_utils.py  memento_utils.py  path_utils.py  plot_utils.py  plumed_utils.py  reus_utils.py  stat_utils.py  (+4 more)
site/: 404.html  index.html  objects.inv  search.json
tests/: 1_binding_pocket_analysis_test.py  1_binding_pocket_analysis_test_v2.py  conftest.py  utils.py
utils/: check_consistency.py  md_utils.py  path_utils.py  traj_analysis.py  traj_analysis_new.py
(+225 files in other folders)
