[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fepa"
version = "0.1.0"
description = "A package for analyzing the binding pocket for Free Energy simulations"
authors = [
    { name = "Nithishwer Mouroug Anand", email = "nithishwer@gmail.com" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10.0"
dependencies = ["pandas>=2.2.3", "pensa>=0.6.0", "seaborn>=0.13.2"]

[tool.setuptools]
packages = ["fepa"] # You can replace with `find:` for auto-discovery

[project.urls]
Homepage = "https://github.com/Nithishwer/FEPA"
Repository = "https://github.com/Nithishwer/FEPA"
